openturns/1.16/_sources/auto_reliability_sensitivity/sensitivity_analysis/plot_functional_chaos_sensitivity.rst.txt
.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_auto_reliability_sensitivity_sensitivity_analysis_plot_functional_chaos_sensitivity.py>`     to download the full example code
    .. rst-class:: sphx-glr-example-title

    .. _sphx_glr_auto_reliability_sensitivity_sensitivity_analysis_plot_functional_chaos_sensitivity.py:


Sobol' sensitivity indices from chaos
=====================================

In this example we are going to compute global sensitivity indices from a functional chaos decomposition.

We study the Borehole function that models water flow through a borehole:

.. math::
   \frac{2 \pi T_u (H_u - H_l)}{\ln{r/r_w}(1+\frac{2 L T_u}{\ln(r/r_w) r^2_w K_w}\frac{T_u}{T_l})}

With parameters:

- :math:`r_w`: radius of borehole (m)
- :math:`r`: radius of influence (m)
- :math:`T_u`: transmissivity of upper aquifer (:math:`m^2/yr`)
- :math:`H_u`: potentiometric head of upper aquifer (m)
- :math:`T_l`: transmissivity of lower aquifer (:math:`m^2/yr`)
- :math:`H_l`: potentiometric head of lower aquifer (m)
- :math:`L`: length of borehole (m)
- :math:`K_w`: hydraulic conductivity of borehole (:math:`m/yr`)


.. code-block:: default

    from __future__ import print_function
    import openturns as ot
    from operator import itemgetter 
    import openturns.viewer as viewer
    from matplotlib import pylab as plt
    ot.Log.Show(ot.Log.NONE)








borehole model


.. code-block:: default

    dimension = 8
    input_names = ['rw', 'r', 'Tu', 'Hu', 'Tl', 'Hl', 'L', 'Kw']
    model = ot.SymbolicFunction(input_names,
                                ['(2*pi_*Tu*(Hu-Hl))/(ln(r/rw)*(1+(2*L*Tu)/(ln(r/rw)*rw^2*Kw)+Tu/Tl))'])
    coll = [ot.Normal(0.1, 0.0161812),
             ot.LogNormal(7.71, 1.0056),
             ot.Uniform(63070.0, 115600.0),
             ot.Uniform(990.0, 1110.0),
             ot.Uniform(63.1, 116.0),
             ot.Uniform(700.0, 820.0),
             ot.Uniform(1120.0, 1680.0),
             ot.Uniform(9855.0, 12045.0)]
    distribution = ot.ComposedDistribution(coll)
    distribution.setDescription(input_names)








Freeze r, Tu, Tl from model to go faster


.. code-block:: default

    selection = [1,2,4]
    complement = ot.Indices(selection).complement(dimension)
    distribution = distribution.getMarginal(complement)
    model = ot.ParametricFunction(model, selection, distribution.getMarginal(selection).getMean())
    input_names_copy = list(input_names)
    input_names = itemgetter(*complement)(input_names)
    dimension = len(complement)








design of experiment


.. code-block:: default

    size = 1000
    X = distribution.getSample(size)
    Y = model(X)








create a functional chaos model


.. code-block:: default

    algo = ot.FunctionalChaosAlgorithm(X, Y)
    algo.run()
    result = algo.getResult()
    print(result.getResiduals())
    print(result.getRelativeErrors())





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    [0.00291183]
    [2.09627e-08]




Quick summary of sensitivity analysis


.. code-block:: default

    sensitivityAnalysis = ot.FunctionalChaosSobolIndices(result)
    print(sensitivityAnalysis.summary())





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

     input dimension: 5
     output dimension: 1
     basis size: 90
     mean: [73.4093]
     std-dev: [29.9968]
    ------------------------------------------------------------
    Index   | Multi-indice                  | Part of variance  
    ------------------------------------------------------------
          1 | [1,0,0,0,0]                   | 0.666838
          2 | [0,1,0,0,0]                   | 0.0986662
          3 | [0,0,1,0,0]                   | 0.0880665
          4 | [0,0,0,1,0]                   | 0.0792207
          5 | [0,0,0,0,1]                   | 0.0196129
          6 | [2,0,0,0,0]                   | 0.0115136
         16 | [1,1,0,0,0]                   | 0.0106434
    ------------------------------------------------------------


    ------------------------------------------------------------
    Component | Sobol index            | Sobol total index      
    ------------------------------------------------------------
            0 | 0.678358               | 0.710311              
            1 | 0.0986952              | 0.111382              
            2 | 0.0880693              | 0.0992933             
            3 | 0.0799329              | 0.0919759             
            4 | 0.0196164              | 0.0227228             
    ------------------------------------------------------------






draw Sobol' indices


.. code-block:: default

    first_order = [sensitivityAnalysis.getSobolIndex(i) for i in range(dimension)]
    total_order = [sensitivityAnalysis.getSobolTotalIndex(i) for i in range(dimension)]
    graph = ot.SobolIndicesAlgorithm.DrawSobolIndices(input_names, first_order, total_order)
    view = viewer.View(graph)




.. image:: /auto_reliability_sensitivity/sensitivity_analysis/images/sphx_glr_plot_functional_chaos_sensitivity_001.png
    :alt: Sobol' indices
    :class: sphx-glr-single-img





We saw that total order indices are close to first order,
so the higher order indices must be all quite close to 0


.. code-block:: default

    for i in range(dimension):
        for j in range(i):
            print(input_names[i] + ' & '+ input_names[j], ":", sensitivityAnalysis.getSobolIndex([i, j]))

    plt.show()




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Hu & rw : 0.010860886579934864
    Hl & rw : 0.009607726041606054
    Hl & Hu : 1.4601841802924869e-05
    L & rw : 0.008975177398832268
    L & Hu : 0.0013327297633110656
    L & Hl : 0.0011660044708696178
    Kw & rw : 0.00215879679042345
    Kw & Hu : 0.0003093745303426701
    Kw & Hl : 0.00027900909735913924
    Kw & L : 0.0002660106689199569





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  8.605 seconds)


.. _sphx_glr_download_auto_reliability_sensitivity_sensitivity_analysis_plot_functional_chaos_sensitivity.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_functional_chaos_sensitivity.py <plot_functional_chaos_sensitivity.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_functional_chaos_sensitivity.ipynb <plot_functional_chaos_sensitivity.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
